# carcassone-evolved

./: Cargo.toml
resources/: cards.json
src/: algorithm.rs  carcassone.rs  cards.rs  evolution.rs  main.rs  model.rs
