[package]
name = "carcassone"
version = "0.1.0"
authors = ["Roman Petrenko <roman@canva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
cairo-rs = "0.8.1"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_24"]

[dependencies.gdk]
version = ""
features = ["v3_24"]

[dependencies.gdk-pixbuf]
version = ""
features = ["v2_36"]

[dependencies.gio]
version = ""
features = ["v2_56"]

[dependencies.glib]
version = ""
features = ["v2_56"]