[package]
name = "carcassone"
version = "0.1.0"
authors = ["Roman Petrenko <roman@canva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
gtk = "0.8.1"
glib = "0.9.3"
gio = "0.8.1"
cairo-rs = "0.8.1"
